Bugfix/etsl-567 fixed alignment issues, bugfix/etsl-672 fixed slider alignment

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/craousel_benefits.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/craousel_benefits.scss
@@ -51,6 +51,7 @@
       .next.next-with--topcarousel,
       .prev.prev-with--topcarousel {
         position: absolute;
+        margin-top: toRem(-112);
       }
 
     .next-with--topcarousel {
@@ -60,6 +61,7 @@
 
       @include respond-to-min-max($desktop-min, $tablet) {
         margin-top: -7.5em;
+        right: 0;
       }
 
       @include respond-to-min-max($desktop-wide, $desktop) {
